cmake_minimum_required(VERSION 3.29)
project(Lab_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab_2 main.cpp
        product.cpp
        product.h
        electronic.cpp
        electronic.h
        foodproduct.h
        foodproduct.cpp
        foodproduct.cpp
        item.h
        item.cpp
        store.h
        store.cpp
        store.h
        store.h
        menu.cpp)
